--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "oaex-node-liqui",
+  "name": "oaex-liqui",
   "version": "1.0.0",
   "description": "Node.js client for Liqui crypto currency exchange",
   "main": "index.js",
@@ -19,5 +19,10 @@
   "dependencies": {
     "request": "^2.83.0",
     "request-promise-native": "^1.0.5"
-  }
+  },
+  "keywords": [
+    "liqui",
+    "exchange",
+    "cryptocurrency"
+  ]
 }
