--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Node.js client for Liqui crypto currency exchange",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha"
   },
   "repository": {
     "type": "git",
@@ -24,5 +24,9 @@
     "liqui",
     "exchange",
     "cryptocurrency"
-  ]
+  ],
+  "devDependencies": {
+    "chai": "^4.1.2",
+    "mocha": "^4.0.0"
+  }
 }
