add node version requirement

--- a/package.json
+++ b/package.json
@@ -6,6 +6,9 @@
   "scripts": {
     "test": "mocha"
   },
+  "engines": {
+    "node": ">= 8.0"
+  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/open-asset-exchange/oaex-node-liqui.git"
